Add met description

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="description"
+      content="A modern, responsive product showcase platform with image gallery and interactive features.
+"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products Gallery</title>
